--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
     "name": "turing-frontend",
     "version": "0.1.0",
     "private": true,
-    "proxy": "http://localhost:3001/api",
     "dependencies": {
         "@types/jest": "^23.3.10",
         "@types/node": "^10.12.18",
@@ -15,6 +14,7 @@
         "bootstrap": "^4.2.1",
         "evergreen-ui": "^4.8.0",
         "javascript-time-ago": "^1.0.34",
+        "popper.js": "^1.14.7",
         "react": "^16.7.0",
         "react-dom": "^16.7.0",
         "react-redux": "^6.0.0",
@@ -25,6 +25,7 @@
         "redux": "^4.0.1",
         "redux-thunk": "^2.3.0",
         "toastr": "^2.1.4",
+        "redux-devtools-extension": "^2.13.8",
         "typescript": "^3.2.2"
     },
     "scripts": {
@@ -32,7 +33,6 @@
         "build": "react-scripts-ts build",
         "test": "react-scripts-ts test --env=jsdom",
         "eject": "react-scripts-ts eject",
-        "postinstall": "cd ./node_modules/highlight.js && npm i && node ./tools/build.js :common",
         "installDep": "npm install"
     },
     "devDependencies": {
@@ -41,8 +41,9 @@
         "@types/react": "^16.7.18",
         "@types/react-dom": "^16.0.11",
         "jest": "^23.6.0",
-        "react-scripts-ts": "3.1.0",
-        "redux-devtools-extension": "^2.13.7",
         "redux-mock-store": "^1.5.3"
+    },
+    "engines": {
+        "node": "8.x"
     }
 }
