--- a/package.json
+++ b/package.json
@@ -40,7 +40,12 @@
         "@types/node": "^10.12.18",
         "@types/react": "^16.7.18",
         "@types/react-dom": "^16.0.11",
+        "chai": "^4.2.0",
+        "enzyme": "^3.9.0",
+        "enzyme-adapter-react-16": "^1.11.2",
+        "enzyme-to-json": "^3.3.5",
         "jest": "^23.6.0",
+        "mocha": "^6.0.2",
         "redux-mock-store": "^1.5.3"
     },
     "engines": {
