--- a/package.json
+++ b/package.json
@@ -1,54 +1,64 @@
 {
-    "name": "turing-frontend",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@types/jest": "^23.3.10",
-        "@types/node": "^10.12.18",
-        "@types/react": "^16.7.18",
-        "@types/react-dom": "^16.0.11",
-        "@types/react-redux": "^6.0.11",
-        "@types/react-router-dom": "^4.3.1",
-        "@types/redux": "^3.6.0",
-        "axios": "^0.18.0",
-        "bootstrap": "^4.2.1",
-        "evergreen-ui": "^4.8.0",
-        "javascript-time-ago": "^1.0.34",
-        "popper.js": "^1.14.7",
-        "react": "^16.7.0",
-        "react-dom": "^16.7.0",
-        "react-redux": "^6.0.0",
-        "react-redux-typescript": "^3.0.0-rc.3",
-        "react-router-dom": "^4.3.1",
-        "react-scripts-ts": "3.1.0",
-        "react-test-renderer": "^16.7.0",
-        "redux": "^4.0.1",
-        "redux-thunk": "^2.3.0",
-        "toastr": "^2.1.4",
-        "redux-devtools-extension": "^2.13.8",
-        "typescript": "^3.2.2"
-    },
-    "scripts": {
-        "start": "react-scripts-ts start",
-        "build": "react-scripts-ts build",
-        "test": "react-scripts-ts test --env=jsdom",
-        "eject": "react-scripts-ts eject",
-        "installDep": "npm install"
-    },
-    "devDependencies": {
-        "@types/jest": "^23.3.10",
-        "@types/node": "^10.12.18",
-        "@types/react": "^16.7.18",
-        "@types/react-dom": "^16.0.11",
-        "chai": "^4.2.0",
-        "enzyme": "^3.9.0",
-        "enzyme-adapter-react-16": "^1.11.2",
-        "enzyme-to-json": "^3.3.5",
-        "jest": "^23.6.0",
-        "mocha": "^6.0.2",
-        "redux-mock-store": "^1.5.3"
-    },
-    "engines": {
-        "node": "8.x"
-    }
+  "name": "turing-frontend",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@types/chai": "^4.2.4",
+    "@types/enzyme": "^3.10.3",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/jest": "^23.3.10",
+    "@types/react-redux": "^6.0.14",
+    "@types/react-router-dom": "^4.3.5",
+    "@types/redux": "^3.6.0",
+    "@types/redux-mock-store": "^1.0.1",
+    "axios": "^0.18.1",
+    "bootstrap": "^4.2.1",
+    "evergreen-ui": "^4.21.2",
+    "javascript-time-ago": "^1.0.34",
+    "nightmare": "^3.0.2",
+    "popper.js": "^1.16.0",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-redux": "^6.0.0",
+    "react-redux-typescript": "^3.0.0-rc.3",
+    "react-router-dom": "^4.3.1",
+    "react-scripts-ts": "^4.0.8",
+    "react-test-renderer": "^16.11.0",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "toastr": "^2.1.4",
+    "typescript": "^3.7.2"
+  },
+  "scripts": {
+    "start": "react-scripts-ts start",
+    "build": "react-scripts-ts build",
+    "testa": "react-scripts-ts test jest",
+    "test": "mocha",
+    "eject": "react-scripts-ts eject",
+    "installDep": "npm install"
+  },
+  "devDependencies": {
+    "@types/jest": "^23.3.10",
+    "@types/node": "^10.17.4",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.4",
+    "chai": "^4.2.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "enzyme-to-json": "^3.4.3",
+    "jsdom": "14.0.0",
+    "jsdom-global": "3.0.2",
+    "mocha": "^6.2.2",
+    "redux-mock-store": "^1.5.3"
+  },
+  "engines": {
+    "node": "10.14.2"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
